<resources>
    <string name="app_name">AddressAutofill</string>

    <string name="address_autofill_query_hint">Where to deliver?</string>
    <string name="address_autofill_address_state_hint">State</string>
    <string name="address_autofill_address_zip_hint">Zip Code</string>
    <string name="address_autofill_address_city_hint">City</string>
    <string name="address_autofill_address_apt_hint">Apt., suite, etc. (optional)</string>
    <string name="address_autofill_pin_correction_note">Drag map to correct pin position</string>
    <string name="address_autofill_error_pin_correction">Unable to locate selected coordinate</string>
    <string name="address_autofill_error_select">Unable to resolve selected suggestion</string>
</resources>
