<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    >

    <EditText
        android:id="@+id/query_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="@null"
        android:background="@drawable/card_background"
        android:elevation="4dp"
        android:hint="@string/address_autofill_query_hint"
        android:inputType="text"
        android:minHeight="?actionBarSize"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/card_background"
        android:elevation="4dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_text"
        >

        <EditText
            android:id="@+id/address_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:hint="@string/address_autofill_address_city_hint"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/address_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:hint="@string/address_autofill_address_state_hint"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_city"
            />

        <EditText
            android:id="@+id/address_zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:hint="@string/address_autofill_address_zip_hint"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_state"
            />

        <EditText
            android:id="@+id/address_apartment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:hint="@string/address_autofill_address_apt_hint"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_zip"
            />

        <TextView
            android:id="@+id/full_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_apartment"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/pin_correction_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/address_autofill_pin_correction_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_address"
            tools:visibility="visible"
            />

        <com.mapbox.maps.MapView
            android:id="@+id/map"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pin_correction_note"
            />

        <ImageView
            android:id="@+id/map_pin"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:adjustViewBounds="true"
            android:src="@drawable/red_marker"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/map_center"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintStart_toStartOf="@+id/map"
            />

        <Space
            android:id="@+id/map_center"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintStart_toStartOf="@+id/map"
            app:layout_constraintTop_toTopOf="@+id/map"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.mapbox.search.ui.view.SearchResultsView
        android:id="@+id/search_results_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/card_background"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:paddingTop="8dp"
        android:paddingBottom="22dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_text"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
